# synergy_practice_2026

./: .gitignore  README.md
Кейс №4 - Юнит-тесты googletest/: CMakeLists.txt  README.md
Кейс №4 - Юнит-тесты googletest/include/: BinaryTree.h  Heap.h  Queue.h
Кейс №4 - Юнит-тесты googletest/src/: BinaryTree.cpp  Heap.cpp  Queue.cpp
Кейс №4 - Юнит-тесты googletest/tests/: test_binary_tree.cpp  test_heap.cpp  test_queue.cpp
Кейс №5 - Генерация html страницы/: README.md
Кейс №5 - Генерация html страницы/GO html generator/: x5_tech_generated.html  x5tech_html_generator.go
